modified effective changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</nav>
 
 		<!-- Home -->
-			<article class="wrapper style1">
+			<article class="wrapper_style1">
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
